# 01_Backend/app/Http/Controllers/Api/RatingController.php
@@ -88,4 +88,62 @@ class RatingController extends Controller
 
         return $response;
     }
+
+    /**
+     * Response rating
+     *  @OA\POST(
+     *      path="/rating",
+     *      tags={"Rating"},
+     *      security={{"apiAuth":{}}},
+     *      description="
+     *      Code
+     *          200 - Success
+     *          400 - Bad request
+     *          401 - Not authentication
+     *          403 - Not access
+     *          422 - Input invalidate
+     *          423 - Have other error
+     *          500 - Server error
+     *      ",
+     *      @OA\RequestBody(
+     *           description="Response data",
+     *           @OA\JsonContent(
+     *               @OA\Property(property="tour_id", type="int", example="1"),
+     *               @OA\Property(property="id", type="int", example="1"),
+     *               @OA\Property(property="status", type="string", example="Đã duyệt – Hiển thị"),
+     *               @OA\Property(property="responder", type="int", example="1"),
+     *               @OA\Property(property="message_response", type="string", example="Cảm ơn bạn."),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Result of success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="Code", type="integer", example="200"),
+     *              @OA\Property(
+     *                  property="Data",
+     *                  description="Result of success"
+     *              )
+     *          )
+     *      )
+     *  )
+     */
+    public function store(Request $request)
+    {
+        $response = null;
+        try {
+            $data_res = $this->ratingRepository->response($request->all());
+            $response = response()->json([
+                'Code'         => ResponseCodeConstant::OK,
+                'Data'         => $data_res,
+                'MessageNo'    => "",
+                'Message'      => "",
+                'DataErrors'   => []
+            ]);
+        }
+        catch (\Exception $e) {
+            //
+        }
+        return $response;
+    }
 }
