# 01_Backend/storage/api-docs/api-docs.json
@@ -864,6 +864,72 @@
                         "apiAuth": []
                     }
                 ]
+            },
+            "post": {
+                "tags": [
+                    "Rating"
+                ],
+                "summary": "Response rating",
+                "description": "\n     *      Code\n     *          200 - Success\n     *          400 - Bad request\n     *          401 - Not authentication\n     *          403 - Not access\n     *          422 - Input invalidate\n     *          423 - Have other error\n     *          500 - Server error\n     *      ",
+                "operationId": "2f0a2529dbc2d2b235e694f6bdfc5f6d",
+                "requestBody": {
+                    "description": "Response data",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "tour_id": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
+                                    "id": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
+                                    "status": {
+                                        "type": "string",
+                                        "example": "Đã duyệt – Hiển thị"
+                                    },
+                                    "responder": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
+                                    "message_response": {
+                                        "type": "string",
+                                        "example": "Cảm ơn bạn."
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Result of success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "Code": {
+                                            "type": "integer",
+                                            "example": "200"
+                                        },
+                                        "Data": {
+                                            "description": "Result of success"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
             }
         },
         "/role": {
